--- a/.travis.yml
+++ b/.travis.yml
@@ -41,7 +41,7 @@ before_install:
 
 ## uncomment the following lines to override the default test script
 script:
-  - julia -e 'Pkg.clone(pwd()); Pkg.build("RCall"); Pkg.build("HawkesProcess"); Pkg.test("HawkesProcess"; coverage=true)'
+  - julia -e 'Pkg.clone(pwd()); Pkg.build("HawkesProcess"); Pkg.test("HawkesProcess"; coverage=true)'
 after_success:
   # push coverage results to Coveralls
   - julia -e 'cd(Pkg.dir("HawkesProcess")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
