--- a/.travis.yml
+++ b/.travis.yml
@@ -17,37 +17,37 @@ matrix:
   allow_failures:
   - julia: nightly
 
-before_install:
-  # linux
-  - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys E084DAB9; fi
-  - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo add-apt-repository -y "deb http://cran.rstudio.com/bin/linux/ubuntu $(lsb_release -s -c)/"; fi
-  - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo apt-get update -qq -y; fi
-  - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo apt-get install git r-base r-base-dev r-recommended -y; fi
-
-  # osx
-  # faster than using homebrew/science tap
-  # but no permalink to release download
-  - if [ "$TRAVIS_OS_NAME" == "osx" ]; then wget "https://cran.rstudio.com/bin/macosx/$(wget -qO- https://cran.rstudio.com/bin/macosx/ | sed -n 's/.*href="\(R-[^"]*.pkg\)".*/\1/p' | head -n 1)"; fi
-  - if [ "$TRAVIS_OS_NAME" == "osx" ]; then sudo installer -pkg R-*.pkg -target /; fi
-
-install:
-  - sudo R --vanilla -e 'install.packages("dirichletprocess", repos="http://cran.us.r-project.org")'
-
-
-## uncomment and modify the following lines to manually install system packages
-#addons:
-#  apt: # apt-get for linux
-#    packages:
-#    - gfortran
-#before_script: # homebrew for mac
-#  - if [ $TRAVIS_OS_NAME = osx ]; then brew install gcc; fi
-
-## uncomment the following lines to override the default test script
-script:
-  - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
-  - julia -e 'Pkg.clone(pwd()); Pkg.build("HawkesProcess"); Pkg.test("HawkesProcess"; coverage=true)'
-after_success:
-  # push coverage results to Coveralls
-  - julia -e 'cd(Pkg.dir("HawkesProcess")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
-  # push coverage results to Codecov
-  - julia -e 'cd(Pkg.dir("HawkesProcess")); Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())'
+# before_install:
+#   # linux
+#   - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys E084DAB9; fi
+#   - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo add-apt-repository -y "deb http://cran.rstudio.com/bin/linux/ubuntu $(lsb_release -s -c)/"; fi
+#   - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo apt-get update -qq -y; fi
+#   - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo apt-get install git r-base r-base-dev r-recommended -y; fi
+#
+#   # osx
+#   # faster than using homebrew/science tap
+#   # but no permalink to release download
+#   - if [ "$TRAVIS_OS_NAME" == "osx" ]; then wget "https://cran.rstudio.com/bin/macosx/$(wget -qO- https://cran.rstudio.com/bin/macosx/ | sed -n 's/.*href="\(R-[^"]*.pkg\)".*/\1/p' | head -n 1)"; fi
+#   - if [ "$TRAVIS_OS_NAME" == "osx" ]; then sudo installer -pkg R-*.pkg -target /; fi
+#
+# install:
+#   - sudo R --vanilla -e 'install.packages("dirichletprocess", repos="http://cran.us.r-project.org")'
+#
+#
+# ## uncomment and modify the following lines to manually install system packages
+# #addons:
+# #  apt: # apt-get for linux
+# #    packages:
+# #    - gfortran
+# #before_script: # homebrew for mac
+# #  - if [ $TRAVIS_OS_NAME = osx ]; then brew install gcc; fi
+#
+# ## uncomment the following lines to override the default test script
+# script:
+#   - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
+#   - julia -e 'Pkg.clone(pwd()); Pkg.build("HawkesProcess"); Pkg.test("HawkesProcess"; coverage=true)'
+# after_success:
+#   # push coverage results to Coveralls
+#   - julia -e 'cd(Pkg.dir("HawkesProcess")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
+#   # push coverage results to Codecov
+#   - julia -e 'cd(Pkg.dir("HawkesProcess")); Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())'
