--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,15 @@ notifications:
 codecov: true
 coveralls: true
 
-## uncomment the following lines to allow failures on nightly julia
-## (tests will run but not make your overall status red)
-matrix:
+jobs:
   allow_failures:
   - julia: nightly
+  include:
+    - stage: "Documentation"
+      julia: 1.5
+      os: linux
+      script:
+        - julia --project=docs/ -e 'using Pkg; Pkg.develop(PackageSpec(path=pwd()));
+                                               Pkg.instantiate()'
+        - julia --project=docs/ docs/make.jl
+      after_success: skip
