--- a/Project.toml
+++ b/Project.toml
@@ -10,5 +10,5 @@ Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [compat]
 Distributions = "0.23, 0.24, 0.25"
-StatsBase = "0.33"
+StatsBase = "0.33, 0.34"
 julia = "1"
